# image_recognition

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/image_recognition_demo_test/: facade.py  image.py  main.py  recognition.py  singleton.py  strategy.py  unit_test.py
src/image_recognition_demo_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/image_recognition_demo_test_v1.egg-info/: PKG-INFO  SOURCES.txt
src/image_recognition_vladdemo/: __init__.py  e2e_test.py  image.py  integration_test.py  main.py  recognition.py  singleton.py
src/image_recognition_vladdemo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
