[metadata]
name = image_recognition_demo_test
version = 0.1.1
author = vladdemo1
author_email = vladdemo140@gmail.com
description = Test package about image recognition
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vladdemo1/image_recognition
project_urls =
    Bug Tracker = https://github.com/vladdemo1/image_recognition/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src